WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34276
[Android] Numerous files are missing includes for HashMap/HashSet
https://bugs.webkit.org/show_bug.cgi?id=34276
Summary
[Android] Numerous files are missing includes for HashMap/HashSet
Steve Block
Reported
2010-01-28 10:49:19 PST
Numerous WebCore files are missing includes for HashMap/HashSet. This causes build errors on Android. - WebCore/platform/network/ProtectionSpaceHash.h - Missing HashTraits.h - WebCore/platform/network/CredentialStorage.cpp - Missing HashMap.h and HashSet.h - WebCore/platform/KURL.cpp - Missing HashMap.h
Attachments
Patch
(1.92 KB, patch)
2010-01-28 10:59 PST
,
Steve Block
levin
: review+
steveblock
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-01-28 10:59:17 PST
Created
attachment 47634
[details]
Patch
Steve Block
Comment 2
2010-01-28 16:26:32 PST
Comment on
attachment 47634
[details]
Patch Will land manually
Steve Block
Comment 3
2010-01-28 16:32:25 PST
Landed manually as
http://trac.webkit.org/changeset/54028
Closing bug as resolved
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug