Add missing includes for HashMap/HashSet https://bugs.webkit.org/show_bug.cgi?id=34276

Reviewed by David Levin.

No new tests, build fix only.

* platform/KURL.cpp: Modified. Include HashMap.h
* platform/network/CredentialStorage.cpp: Modified. Include HashMap.h and HashSet.h
* platform/network/ProtectionSpaceHash.h: Modified. Include HashTraits.h



Canonical link: https://commits.webkit.org/45396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54028 268f45cc-cd09-0410-ab3c-d52691b4dbfc